sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:12: error: not found: value z
      z = z-1
      ^